--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
         <div>
             <h1>BlackJack</h1>
-            <!-- Game start -->
+            <!-- Game start -->/
             <div id="message">Press Start Button</div>
             <div id="start">
                 <button id="startbtn" type="button" onclick="Start()" class="button">Start Game</button>
