--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <div>
-            <h1>BlackJack</h1>
+            <h1>BlackJack</h1>/
             <!-- Game start -->/
             <div id="message">Press Start Button</div>
             <div id="start">
